Fix random whitespacing for the professor div
Former-commit-id: 601464587b7e7527e590c17cd49f187f67c69249

--- a/streamingOSTeacherApp/www/css/main.css
+++ b/streamingOSTeacherApp/www/css/main.css
@@ -659,7 +659,7 @@ hr {
 }
 
 .side-nav {
-  /* width: 250px; */
+  width: 250px; 
   background-color: #ffffff;
   z-index: 1000;
   top: 65px;
